Asynchronously delete small DOM nodes https://bugs.webkit.org/show_bug.cgi?id=282249 rdar://137026148
Reviewed by NOBODY (OOPS!).

Make removedChildren DOM nodes get deleted using the Opportunistic Task
Scheduler.
Instead of synchronously deleting removed child nodes upon each call
to removeChildren, keep a strong reference to each child that has been
removed from the DOM tree but has not been deallocated. Remove the
last reference using the Opportunistic Task Scheduler which will call
each node's destructor.
This is an optimization.

* LayoutTests/fast/dom/gc-dom-tree-lifetime-expected.txt:
* LayoutTests/fast/dom/gc-dom-tree-lifetime.html:
* LayoutTests/platform/mac-wk1/TestExpectations:
* Source/WebCore/Headers.cmake:
* Source/WebCore/Sources.txt:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/dom/AsyncNodeDeletionQueue.cpp: Added.
(WebCore::isNodeLikelySmall):
(WebCore::AsyncNodeDeletionQueue::add):
(WebCore::AsyncNodeDeletionQueue::canNodeBeAsyncDeleted):
(WebCore::AsyncNodeDeletionQueue::clear):
* Source/WebCore/dom/AsyncNodeDeletionQueue.h: Added.
* Source/WebCore/dom/ContainerNode.cpp:
(WebCore::ContainerNode::removeAllChildrenWithScriptAssertion):
(WebCore::ContainerNode::removeChildren):
(WebCore::ContainerNode::delayDeletingRemovedChildren):
* Source/WebCore/dom/ContainerNode.h:
* Source/WebCore/dom/ContainerNodeAlgorithms.cpp:
(WebCore::notifyNodeRemovedFromDocument):
(WebCore::notifyChildNodeRemoved):
* Source/WebCore/dom/ContainerNodeAlgorithms.h:
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::removedLastRef):
* Source/WebCore/dom/Document.h:
(WebCore::Document::nodesToAsyncDelete):
* Source/WebCore/page/MemoryRelease.cpp:
(WebCore::releaseNoncriticalMemory):
* Source/WebCore/page/Page.cpp:
(WebCore::Page::performOpportunisticallyScheduledTasks):
(WebCore::Page::deleteRemovedChildNodes):
* Source/WebCore/page/Page.h:
* Source/WebCore/page/Settings.yaml:

--- a/LayoutTests/fast/dom/gc-dom-tree-lifetime.html
+++ b/LayoutTests/fast/dom/gc-dom-tree-lifetime.html
@@ -5,20 +5,26 @@
 </head>
 <body>
 <script>
+jsTestIsAsync = true;
+var totalNumNodes = 0;
 var testCases = [["div0", "div1", "div2"],
                  ["div0", "div2", "div1"],
                  ["div1", "div0", "div2"],
                  ["div1", "div2", "div0"],
                  ["div2", "div0", "div1"],
                  ["div2", "div1", "div0"]];
-
+var maxFailCount = 1500;
+var failCount = 0;
 var rootDiv = document.createElement("div");
 document.body.appendChild(rootDiv);
 var testHtml = "<div id='div0-parent'><div id='div0'><div id='div0-child'></div></div><div id='div1-parent'><div id='div1'><div id='div1-child'></div></div><div id='div2-parent'><div id='div2'><div id='div2-child'></div></div></div></div></div>";
-
+var numNodesAfterTest = 0;
+var prevNodes = 0;
+var numNodesDeleted = 0;
 testCases.forEach(function (test) {
     var divX, divY, divZ;
     debug("=== Initial state ===");
+    // get the max number of nodes in case idle time occurs before doing node count check
     rootDiv.innerHTML = testHtml;
     divX = document.getElementById(test[0]);
     divY = document.getElementById(test[1]);
@@ -71,16 +77,34 @@ testCases.forEach(function (test) {
     divY = null;
     divZ = null;
     gc();
+    numNodesDeleted += (prevNodes - window.internals.numberOfLiveNodes());
+});
+if (window.internals)
+    numNodesAfterTest = window.internals.numberOfLiveNodes();
+// DOM nodes can be destructed asynchronously during idle time. Check number of nodes destructed on idle callback.
+// Use the timeout to ensure idle time occurs on the event loop after the test logic finishes so that DOM nodes will 
+// be opportunistically destructed before doing the check.
+setTimeout(() => window.requestIdleCallback(checkNumberOfNodesAlive), 500);
+
+function checkNumberOfNodesAlive() {
     if (window.internals) {
         // If all the Node objects in testHtml are successfully destructed,
-        // at least 9 <div>s objects will be removed.
+        // at least 9 <div>s objects will be removed for each test case.
         // (Actually, since testHtml rendering requires more than 9 Node objects.)
-        if (window.internals.numberOfLiveNodes() <= prevNodes - 9)
+        numNodesDeleted = Math.max(numNodesAfterTest - window.internals.numberOfLiveNodes(), numNodesDeleted);
+        if (numNodesDeleted >= (9 * testCases.length)) {
             testPassed("All <div> objects in a DOM tree are successfully destructed.");
-        else
-            testFailed("<div> objects in a DOM tree are not destructed.");
+            finishJSTest();
+        }
+        else {
+            if (++failCount >= maxFailCount) {
+                testFailed("<div> objects in a DOM tree are not destructed.");
+                finishJSTest();
+            }
+            window.requestIdleCallback(checkNumberOfNodesAlive);
+        }
     }
-});
+}
 
 function checkParentAndChildAlive(div, name) {
     globalDiv = div;
